# airpods-battery-widget

./: .gitignore  LICENSE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
airpods-bluetooth/: CMakeLists.txt  addon.cpp  airpods-bluetooth.cpp  airpods-bluetooth.hpp  airpods.cpp  airpods.hpp  index.d.ts  index.js  package.json
apps/: components.json  electron.vite.config.ts  package.json  tsconfig.json
apps/assets/: config.json
apps/native/Release/: airpods-bluetooth.exp  airpods-bluetooth.lib  airpods-bluetooth.node
apps/resources/: config.json
apps/src/: tailwind.config.ts
apps/src/main/: app.ts  index.ts
apps/src/main/types/: config.ts
apps/src/preload/: global.d.ts  index.ts
apps/src/renderer/: list.html  widget.html
apps/src/renderer/src/: themes.ts
apps/src/renderer/src/components/glass/composite/repository-card-glass/: repository-card-glass.tsx
apps/src/renderer/src/components/ui/: avatar-glass.tsx  button-glass.tsx  circular-progress-glass.tsx  combobox-glass.tsx  hover-card-glass.tsx  tabs-glass.tsx
apps/src/renderer/src/components/ui/sidebar-glass/: sidebar-glass.tsx  sidebar-menu.tsx
apps/src/renderer/src/lib/: theme-context.tsx
apps/src/renderer/src/lib/hooks/: use-resize.tsx
apps/src/renderer/src/list/: App.tsx  index.tsx
apps/src/renderer/src/styles/: globals.css
apps/src/renderer/src/widget/: App.tsx
